human_written_tests/WebAssembly/processed_control_flow_validation/test_loop_33.wast
(assert_invalid
  (module (func $type-param-num-vs-num
    (f32.const 0) (loop (param i32) (drop))
  ))
  "type mismatch"
)